--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header class="header">
+        <a href="" class="header__logo">
+            <div class="header__logo-img"></div>
+        </a>
+        <nav class="header__nav">
+            <li class="header__link">Ссылка 1</li>
+            <li class="header__link">Ссылка 2</li>
+            <li class="header__link">Ссылка 3</li>
+        </nav>
+    </header>
 </body>
 </html>
