--- a/index.html
+++ b/index.html
@@ -16,5 +16,10 @@
             <li class="header__link">Ссылка 3</li>
         </nav>
     </header>
+    <section class="about">
+        <div class="container">
+            <p>about text</p>
+        </div>
+    </section>
 </body>
 </html>
