--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <li class="header__link">Ссылка 1</li>
             <li class="header__link">Ссылка 2</li>
             <li class="header__link">Ссылка 3</li>
+            <li class="header__link">Ссылка 4</li>
         </nav>
     </header>
     <section class="about">
